[package]
name = "grapheners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.3"
serde_json = "1.0.83"
json = "0.12.4"
url = "2.2.2"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
fast_websocket_client = "0.1.2"